--- a/nginx.conf
+++ b/nginx.conf
@@ -13,10 +13,10 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name api.lucasschottler.dev;
 
         # Redirect HTTP to HTTPS (uncomment when SSL is configured)
-        # return 301 https://$server_name$request_uri;
+        return 301 https://$server_name$request_uri;
     
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -48,45 +48,45 @@ http {
         }
     }
 
-    # HTTPS configuration (uncomment and configure when you have SSL certificates)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name localhost;
-    #
-    #     # SSL certificates
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #
-    #     # SSL configuration
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers HIGH:!aNULL:!MD5;
-    #     ssl_prefer_server_ciphers on;
-    #
-    #     # Security headers
-    #     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    #     add_header X-Frame-Options "SAMEORIGIN" always;
-    #     add_header X-Content-Type-Options "nosniff" always;
-    #     add_header X-XSS-Protection "1; mode=block" always;
-    #
-    #     # API endpoints
-    #     location / {
-    #         limit_req zone=api_limit burst=20 nodelay;
-    #         
-    #         proxy_pass http://api_backend;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         
-    #         proxy_connect_timeout 60s;
-    #         proxy_send_timeout 60s;
-    #         proxy_read_timeout 60s;
-    #     }
-    #
-    #     location /superior/health {
-    #         proxy_pass http://api_backend;
-    #         proxy_set_header Host $host;
-    #         access_log off;
-    #     }
-    # }
+    # HTTPS configuration
+    server {
+        listen 443 ssl http2;
+        server_name api.lucasschottler.dev;
+
+        # SSL certificates
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+
+        # Security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+
+        # API endpoints
+        location / {
+            limit_req zone=api_limit burst=20 nodelay;
+            
+            proxy_pass http://api_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+
+        location /superior/health {
+            proxy_pass http://api_backend;
+            proxy_set_header Host $host;
+            access_log off;
+        }
+    }
 }
