--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -14,7 +14,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME} -d superior"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -55,23 +55,8 @@ services:
     networks:
       - app-network
 
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    container_name: pgadmin-prod
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@admin.com}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
-    ports:
-      - "5050:80"
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
-    restart: unless-stopped
-    networks:
-      - app-network
-
 volumes:
   postgres-data:
-  pgadmin-data:
 
 networks:
   app-network:
