Lakes to db patch complete

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,6 +28,29 @@ services:
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
       API_KEY: ${API_KEY}
+      AMAZON_SELLER_ID: ${AMAZON_SELLER_ID}
+
+      AMAZON_IDENTIFIER: ${AMAZON_IDENTIFIER}
+      AMAZON_CLIENT_SECRET: ${AMAZON_CLIENT_SECRET}
+      AMAZON_TOKEN: ${AMAZON_TOKEN}
+
+      EBAY_DEVID: ${EBAY_DEVID}
+
+      EBAY_APPID: ${EBAY_APPID}
+      EBAY_CERTID: ${EBAY_CERTID}
+
+      EBAY_TOKEN: ${EBAY_TOKEN}
+      EBAY_REFRESH_TOKEN: ${EBAY_REFRESH_TOKEN}
+
+      EBAY_INVENTORY_API_END: ${EBAY_INVENTORY_API_END}
+      EBAY_IDENTITY_END: ${EBAY_IDENTITY_END}
+
+      EBAY_PAYMENT_REGULAR_POLICY: ${EBAY_PAYMENT_REGULAR_POLICY}
+      EBAY_RETURN_POLICY: ${EBAY_RETURN_POLICY}
+
+      EBAY_FULFILLMENT_DROP_ADVANTAGE_POLICY: ${EBAY_FULFILLMENT_DROP_ADVANTAGE_POLICY}
+      EBAY_FULFILLMENT_DROP_ECONOMY_POLICY: ${EBAY_FULFILLMENT_DROP_ECONOMY_POLICY}
+      EBAY_FULFILLMENT_STOCK_POLICY: ${EBAY_FULFILLMENT_STOCK_POLICY}
     ports:
       - "8080:8080"
     depends_on:
