Mass update function

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -14,7 +14,7 @@ spring:
       max-lifetime: 1800000
 logging:
   level:
-    root: WARN
+    root: INFO
     dev.lucasschotttler: INFO
 server:
   error:
