--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -23,7 +23,7 @@ services:
 
   api:
     build: .
-    container_name: api-dev
+    container_name: api
     environment:
       DB_HOST: postgres
       DB_PORT: 5432
@@ -32,25 +32,18 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       API_KEY: ${API_KEY}
       AMAZON_SELLER_ID: ${AMAZON_SELLER_ID}
-
       AMAZON_IDENTIFIER: ${AMAZON_IDENTIFIER}
       AMAZON_CLIENT_SECRET: ${AMAZON_CLIENT_SECRET}
       AMAZON_TOKEN: ${AMAZON_TOKEN}
-
       EBAY_DEVID: ${EBAY_DEVID}
-
       EBAY_APPID: ${EBAY_APPID}
       EBAY_CERTID: ${EBAY_CERTID}
-
       EBAY_TOKEN: ${EBAY_TOKEN}
       EBAY_REFRESH_TOKEN: ${EBAY_REFRESH_TOKEN}
-
       EBAY_INVENTORY_API_END: ${EBAY_INVENTORY_API_END}
       EBAY_IDENTITY_END: ${EBAY_IDENTITY_END}
-
       EBAY_PAYMENT_REGULAR_POLICY: ${EBAY_PAYMENT_REGULAR_POLICY}
       EBAY_RETURN_POLICY: ${EBAY_RETURN_POLICY}
-
       EBAY_FULFILLMENT_DROP_ADVANTAGE_POLICY: ${EBAY_FULFILLMENT_DROP_ADVANTAGE_POLICY}
       EBAY_FULFILLMENT_DROP_ECONOMY_POLICY: ${EBAY_FULFILLMENT_DROP_ECONOMY_POLICY}
       EBAY_FULFILLMENT_STOCK_POLICY: ${EBAY_FULFILLMENT_STOCK_POLICY}
@@ -60,6 +53,8 @@ services:
       postgres:
         condition: service_healthy
     restart: unless-stopped
+    networks:
+      - app-network
 
   nginx:
     image: nginx:alpine
