--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -47,11 +47,28 @@ services:
       EBAY_FULFILLMENT_DROP_ADVANTAGE_POLICY: ${EBAY_FULFILLMENT_DROP_ADVANTAGE_POLICY}
       EBAY_FULFILLMENT_DROP_ECONOMY_POLICY: ${EBAY_FULFILLMENT_DROP_ECONOMY_POLICY}
       EBAY_FULFILLMENT_STOCK_POLICY: ${EBAY_FULFILLMENT_STOCK_POLICY}
-    ports:
-      - "8080:8080"
+    expose:
+      - "8080"
     depends_on:
       postgres:
         condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - app-network
+
+  nextjs-app:
+    build:
+      context: /home/schottler3/superior-tool
+      dockerfile: Dockerfile
+    container_name: nextjs-app
+    env_file:
+      - /home/schottler3/superior-tool/.env.local
+    expose:
+      - "8080"
+    volumes:
+      - /home/schottler3/superior-tool:/app
+      - /app/node_modules
+      - /app/.next
     restart: unless-stopped
     networks:
       - app-network
@@ -67,6 +84,7 @@ services:
       - ./ssl:/etc/nginx/ssl:ro
     depends_on:
       - api
+      - nextjs-app
     restart: unless-stopped
     networks:
       - app-network
