--- a/nginx.conf
+++ b/nginx.conf
@@ -5,25 +5,46 @@ events {
 http {
     # Rate limiting
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=nextjs_limit:10m rate=30r/s;
     
-    # Upstream application server
+    # Upstream servers
     upstream api_backend {
         server api:8080;
     }
 
+    upstream nextjs_backend {
+        server nextjs-app:8080;
+    }
+
+    # API server - HTTP redirect to HTTPS
     server {
         listen 80;
         server_name api.lucasschottler.dev;
 
-        # Redirect HTTP to HTTPS (uncomment when SSL is configured)
         return 301 https://$server_name$request_uri;
+    }
+
+    # API server - HTTPS
+    server {
+        listen 443 ssl http2;
+        server_name api.lucasschottler.dev;
+    
+        # SSL certificates
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+    
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
     
         # Security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-
+    
         # API endpoints
         location / {
             limit_req zone=api_limit burst=20 nodelay;
@@ -34,12 +55,11 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             
-            # Timeouts
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
         }
-
+    
         # Health check endpoint (no rate limiting)
         location /superior/health {
             proxy_pass http://api_backend;
@@ -48,45 +68,54 @@ http {
         }
     }
 
-     #HTTPS configuration (uncomment and configure when you have SSL certificates)
-     server {
-         listen 443 ssl http2;
-         server_name api.lucasschottler.dev;
+    # Next.js app - HTTP redirect to HTTPS
+    server {
+        listen 80;
+        server_name app.lucasschottler.dev;
+
+        return 301 https://$server_name$request_uri;
+    }
+
+    # Next.js app - HTTPS
+    server {
+        listen 443 ssl http2;
+        server_name app.lucasschottler.dev;
     
-         # SSL certificates
-         ssl_certificate /etc/nginx/ssl/cert.pem;
-         ssl_certificate_key /etc/nginx/ssl/key.pem;
+        # SSL certificates (same certs or different ones)
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
     
-         # SSL configuration
-         ssl_protocols TLSv1.2 TLSv1.3;
-         ssl_ciphers HIGH:!aNULL:!MD5;
-         ssl_prefer_server_ciphers on;
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
     
-         # Security headers
-         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-         add_header X-Frame-Options "SAMEORIGIN" always;
-         add_header X-Content-Type-Options "nosniff" always;
-         add_header X-XSS-Protection "1; mode=block" always;
+        # Security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
     
-         # API endpoints
-         location / {
-             limit_req zone=api_limit burst=20 nodelay;
-             
-             proxy_pass http://api_backend;
-             proxy_set_header Host $host;
-             proxy_set_header X-Real-IP $remote_addr;
-             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-             proxy_set_header X-Forwarded-Proto $scheme;
-             
-             proxy_connect_timeout 60s;
-             proxy_send_timeout 60s;
-             proxy_read_timeout 60s;
-         }
-    
-             location /superior/health {
-             proxy_pass http://api_backend;
-             proxy_set_header Host $host;
-             access_log off;
-         }
-     }
+        # Next.js app
+        location / {
+            limit_req zone=nextjs_limit burst=50 nodelay;
+            
+            proxy_pass http://nextjs_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket support for Next.js hot reload
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_cache_bypass $http_upgrade;
+            
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
+    }
 }
