--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -20,11 +20,32 @@ services:
       retries: 5
     networks:
       - app-network
-
+  redis:
+    image: redis:7-alpine
+    container_name: redis-dev
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
   api:
     build: .
     container_name: api
     environment:
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
       DB_HOST: postgres
       DB_PORT: 5432
       DB_NAME: superior
@@ -51,6 +72,8 @@ services:
       - "8080"
     depends_on:
       postgres:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     restart: unless-stopped
     networks:
